test SplashViewModel